# earshot

./: .gitignore  .gitleaks.toml  .jscpd.json  .markdownlint-cli2.yaml  .periphery.yml  .prettierignore  .secretlintignore  .spectral.yaml  .stylelintrc.json  .swift-format  .swiftlint.yml  .yamllint  AGENTS.md  Brewfile  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  commitlint.config.js  esbuild.config.mjs  knip.json  lefthook.yml  manifest.json  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  renovate.json  styles.css  tsconfig.base.json  tsconfig.json
.claude/: settings.json
.claude/rules/: devops.md  product.md  qa.md  shared.md
.claude/skills/: .manifest.sha256
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  codeql.yml  handoff-check.yml  inline-suppressions.yml  osv-scanner.yml  pr-always.yml  release-please.yml  review-state-check.yml  sbom.yml  stryker.yml
diarizer/: .gitignore  README.md  pyproject.toml
diarizer/earshot_diarizer/: __init__.py  cli.py  constants.py
diarizer/tests/: test_cli.py
docs/: ai-index.md
docs/architecture/: README.md
docs/backlog/: ideas.md
docs/conventions/: branch-strategy.md  (+2 more)
eslint-rules/: no-scattered-constants.d.mts  no-scattered-constants.mjs
plugin/: .dependency-cruiser.cjs  README.md  eslint.config.js  package.json  stryker.config.json  tsconfig.json  vitest.config.ts
scripts/: check-ai-doc-routing.mjs  check-flaky.mjs  check-inline-suppressions.mjs  check-openapi.mjs  check-skill-content.sh  codebase-check.sh  generate-openapi.mjs  install_to_vault.sh  pr-checks.sh  required-checks.mjs
shared/: .dependency-cruiser.cjs  README.md  eslint.config.js  package.json  stryker.config.json  vitest.config.ts
tools/: dependency-cruiser-base.cjs  eslint-base.config.js  eslint-common-rules.js  eslint-workspace.config.js  lint-staged-eslint.sh  playwright-base.config.js  run-size-limit.sh  vite-base.config.js  vitest-base.config.js  vitest-flaky-reporter.js
(+73 files in other folders)
