[project]
name = "earshot-diarizer"
version = "0.1.0"
description = "Local pyannote.audio sidecar for the Earshot Obsidian plugin."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Inoyatov Khamidulla" }]
dependencies = [
  "pyannote-audio==4.0.4",
  "torch>=2.4,<3",
  "torchaudio>=2.4,<3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
  "mypy==1.13.0",
  "bandit==1.8.0",
  "pip-audit==2.7.3",
]

[project.scripts]
earshot-diarize = "earshot_diarizer.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["earshot_diarizer*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["earshot_diarizer", "tests"]
extend-exclude = ["models/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["pyannote.*", "torch.*", "torchaudio.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=earshot_diarizer",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]

[tool.coverage.run]
source = ["earshot_diarizer"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
